Made a (pretty buggy) interface for the adventure log, next step is to get it saving.